Skapa ny model samt databas och view

--- a/Blogg/appsettings.json
+++ b/Blogg/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "DefaultConnection": "DataSource=Blogg.db;Cache=Shared",
     "BloggIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Blogg;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
